@@ -165,7 +165,10 @@ class PackageConfig
   end
 
   def guess_default_path
-    default_path = "/usr/local/lib/pkgconfig:/usr/lib/pkgconfig"
+    default_path = ["/usr/local/lib64/pkgconfig",
+                    "/usr/local/lib/pkgconfig",
+                    "/usr/lib64/pkgconfig",
+                    "/usr/lib/pkgconfig"].join(":")
     libdir = ENV["PKG_CONFIG_LIBDIR"]
     default_path = "#{libdir}:#{default_path}" if libdir
     pkg_config = with_config("pkg-config", ENV["PKG_CONFIG"] || "pkg-config")
