@@ -1,3 +1,7 @@
+2008-06-13  Kouhei Sutou  <kou@cozmixng.org>
+
+	* pkg-config.rb: add PREFIX/lib64/pkgconfig to default path list.
+
 2008-06-12  Kouhei Sutou  <kou@cozmixng.org>
 
 	* extconf.rb: include <ruby.h>.
